# Paradigmas_De_Programacion

01_tokenizacion/: holamundo.py  tokenizacion.py  tokenizacion_archivo_py.py
02_lexer/: ejemplo_code.py  mini_lexer.py
ejercicios/01_tokenizacion/: ejemplotokenizacion.py  holamundo.txt
ejercicios/02_lexer/: mini_lexer.py
ejercicios_haskell/: Ejercicios.hs  Main.hs
ejercicios_haskell/manual/: codigo.js  index.html  styles.css
unidad4_ejercicios_haskell/: ejercicios.cabal
unidad4_ejercicios_haskell/app/: main.hs
unidad4_ejercicios_haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
unidad4_ejercicios_haskell/src/: capitulo1.hs
unidad4_ejercicios_haskell/static/: index.html  script.js  style.css
